Issue #2147511 by johnv: Removed Views filters/fields/etc for {workflow_node} when module Worflow Node disabled.
Issue #2147535 by johnv: Added Views filter and field for 'Transition: old sid', to complent existing 'new sid'.
Issue #2147535 by johnv: Added More Views filter/field/sort for 'Workflow: current transition'.
Issue #2147673 by johnv: Marked 'workflow: states' field and sort as deprecated: should be implemented using a relationship.
Issue #2019345 by johnv: Renamed _workflow_view_workflow_get_state_name() to workflow_get_sid_label().
Issue #2130783 by johnv: Added formatter 'count entities with this state' to 'Workflow: state' Views Field.
Issue #2019345 by johnv: Added workflow_get_wid_label().
Issue #2019345 by johnv: Fixed workflow_get_states() in workflow_admin_ui.
Issue #1589254 by fedia.io1: Fixed Rename D6 hook_features_export_rebuild() to D7 hook_features_rebuild().
Issue #2019345 by johnv: Renamed Workflow->getOptions() to workflow_get_state_names().
Issue #2019345 by johnv: Fixed workflow.features.inc helper functions.
Issue #2124915 by fedia.io1, Liam Mitchell: Fixed Transition's target_state and roles aren't exported with features.
Issue #2126867 by slite: Fixed Reverting features causes warning.
Issue #2147781 by zihong0: Fixed error, due to typo in workflow_acces.module.
Issue #2144817 by zihong0: Fixed PHP 5.3/5.4 'Warning: Parameter 1' in workflow_transition_form().
Issue #2019345 by johnv: Renamed Workflow*->get*ByName() to Workflow*->loadByName().
Issue #2124915 by johnv: Fixed transfer transitions with Features.
Issue #2148851 by johnv: Fixed transfer 'tab_roles' using machine names with Features.
Issue #2148851 by brad.bulger, johnv: Fixed warning in Tokens when an old_state is deleted.

Since 7.x-2.0-beta2
Issue #2149027 by johnv: Fixed warning in workflow.rules.inc for PHP5.3/PHP5.4.
Issue #2149121 by johnv: Restructured workflow_views_views_data().