@@ -190,15 +190,12 @@ function _workflow_rules_field_set_state($entity, $field, $sids, $comment = NULL
     $old_sid = workflow_node_current_state($entity, $entity_type, $field_name); // Todo : entity support.
     $transition = new WorkflowTransition($entity_type, $entity, $field_name, $old_sid, $new_sid, $user->uid, REQUEST_TIME, $comment);
     $transition->force($force = TRUE); // "ignoring current user permission."
-    if ($error = $transition->isAllowed($force)) {
-      drupal_set_message(check_plain($error), 'error');
-      $sid = 0;
-    }
-    else {
-      $sid = $transition->execute($force);
-    }
+
+    // Execute the transition. It may bounce, due to extra checks.
+    $sid = $transition->execute($force);
     // Save the entity, but not through entity_save(), since this will check permissions again and trigger rules.
     if ($sid == $new_sid) {
+      // The transition was succesfully executed, or else a message was raised.
       $entity->{$field_name}['und'] = array();
       $entity->{$field_name}['und'][0]['workflow']['workflow_sid'] = $new_sid;
       $entity->{$field_name}['und'][0]['workflow']['workflow_comment'] = $comment;
