@@ -339,3 +339,4 @@ Issue #2148851 by brad.bulger, johnv: Fixed warning in Tokens when an old_state 
 Since 7.x-2.0-beta2
 Issue #2149027 by johnv: Fixed warning in workflow.rules.inc for PHP5.3/PHP5.4.
 Issue #2149121 by johnv: Restructured workflow_views_views_data().
+Issue #2149223 by johnv: Moved calls to Transition->isAllowed() into Transition->execute(), removing duplicate code.
